--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -64,6 +64,10 @@
     <file>images/scoreboard.png</file>
     <file>images/arable_land.png</file>
     <file>images/barn_blue.png</file>
+    <file>images/barn_0.png</file>
+    <file>images/barn_1.png</file>
+    <file>images/barn_2.png</file>
+    <file>images/barn_3.png</file>
     <file>images/barn_green.png</file>
     <file>images/barn_none.png</file>
     <file>images/barn_purple.png</file>
