--- a/Agricola_Front/Basic/information.ui
+++ b/Agricola_Front/Basic/information.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>354</width>
-    <height>108</height>
+    <height>106</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -18,16 +30,16 @@
     <number>40</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>3</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="bottomMargin">
-    <number>0</number>
+    <number>3</number>
    </property>
    <item>
     <widget class="QPushButton" name="btn_setting">
@@ -37,10 +49,18 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color: lightblue;
-            border: 2px solid blue;
-            border-radius: 50%; /* 동그라미 모양으로 만듦 */</string>
+      <string notr="true">background-color: rgb(254, 204, 102);
+            border: 2px solid rgb(253, 128, 8);
+color : black;
+font-size: 14px;
+        /*    border-radius: 50%; */</string>
      </property>
      <property name="text">
       <string>설정</string>
@@ -56,9 +76,11 @@
       </sizepolicy>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: lightblue;
-            border: 2px solid blue;
-            border-radius: 50%; /* 동그라미 모양으로 만듦 */</string>
+      <string notr="true">background-color: rgb(254, 204, 102);
+            border: 2px solid rgb(253, 128, 8);
+color : black;
+font-size: 14px;
+        /*    border-radius: 50%; */</string>
      </property>
      <property name="text">
       <string>점수표</string>
