--- a/Agricola_Front/PersonalField/field_base.ui
+++ b/Agricola_Front/PersonalField/field_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>879</width>
-    <height>673</height>
+    <width>349</width>
+    <height>260</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -117,7 +117,7 @@
           <pointsize>5</pointsize>
          </font>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
+        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1">
          <property name="spacing">
           <number>0</number>
          </property>
@@ -167,7 +167,7 @@
          <item>
           <widget class="QPushButton" name="pushButton_2">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -175,7 +175,7 @@
            <property name="minimumSize">
             <size>
              <width>1</width>
-             <height>1</height>
+             <height>20</height>
             </size>
            </property>
            <property name="font">
@@ -184,8 +184,11 @@
              <pointsize>5</pointsize>
             </font>
            </property>
+           <property name="styleSheet">
+            <string notr="true">border-image: url(:/newPrefix/images/worker_red.png);</string>
+           </property>
            <property name="text">
-            <string>사람</string>
+            <string/>
            </property>
            <property name="checkable">
             <bool>true</bool>
@@ -195,7 +198,7 @@
          <item>
           <widget class="QPushButton" name="pushButton_3">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -203,7 +206,7 @@
            <property name="minimumSize">
             <size>
              <width>1</width>
-             <height>1</height>
+             <height>20</height>
             </size>
            </property>
            <property name="font">
@@ -211,8 +214,11 @@
              <family>Pretendard Medium</family>
             </font>
            </property>
+           <property name="styleSheet">
+            <string notr="true">border-image: url(:/newPrefix/images/worker_red.png);</string>
+           </property>
            <property name="text">
-            <string>사람</string>
+            <string/>
            </property>
            <property name="checkable">
             <bool>true</bool>
@@ -279,7 +285,7 @@
           <pointsize>5</pointsize>
          </font>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,1,1,1">
          <property name="spacing">
           <number>0</number>
          </property>
@@ -329,7 +335,7 @@
          <item>
           <widget class="QPushButton" name="btn_animal">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -346,8 +352,11 @@
              <pointsize>5</pointsize>
             </font>
            </property>
+           <property name="styleSheet">
+            <string notr="true">border-image: url(:/newPrefix/images/vegetable.png);</string>
+           </property>
            <property name="text">
-            <string>동물</string>
+            <string/>
            </property>
            <property name="checkable">
             <bool>true</bool>
@@ -356,6 +365,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="btn_field_unitcount">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
              <width>1</width>
@@ -365,7 +380,7 @@
            <property name="font">
             <font>
              <family>Pretendard Medium</family>
-             <pointsize>8</pointsize>
+             <pointsize>13</pointsize>
             </font>
            </property>
            <property name="styleSheet">
